--- a/WeatherAPI.csproj
+++ b/WeatherAPI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="111.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
